added the signedout handler
